<resources>
    <string name="app_name">TipTime</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="calculate">Calculate</string>
    <string name="tipAmount">Tip Amount: %s</string>
    <string name="tipResult">Tip Result</string>

    <string name="primary_color">Primary color</string>
    <string name="secondary_color">Secondary color</string>
</resources>